--- a/destination/templates/home.html
+++ b/destination/templates/home.html
@@ -38,7 +38,7 @@
             </div>
         </a>
         
-        <!-- Favorite button (igual que en municipios) -->
+        <!-- Favorite button  -->
         {% if user.is_authenticated %}
         <button class="absolute top-2 right-2 z-10 text-2xl bg-white rounded-full w-10 h-10 flex items-center justify-center shadow-md hover:shadow-lg transition-all favorite-btn"
                 data-municipality-id="{{ municipality.id }}"
