--- a/destination/templates/municipality_detail.html
+++ b/destination/templates/municipality_detail.html
@@ -123,36 +123,42 @@
               </div>
         </div>
         
-        <!-- Restaurants Section -->
-        <div class="card bg-white shadow-lg rounded-lg mt-8 p-6">
-            
-            <div class="card-body">
-                <h2 class="card-title text-3xl font-bold text-customDarkGreen font-title">¿Dónde Comer en {{ municipality.name }}?</h2>
 
-                {% if restaurants %}
-                    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-6">
-                        {% for restaurant in restaurants %}
-                            <div class="card bg-white shadow-md rounded-lg p-4 border border-customGreen">
-                                <div class="card-body">
-                                    <h3 class="text-xl font-title text-customDarkGreen">{{ restaurant.name }}</h3>
-                                    <p class="mt-1 text-gray-700">
-                                        <span class="font-semibold font-body">Tipo de comida:</span> {{ restaurant.cuisine_type }}
-                                    </p>
-                                    <p class="mt-1 text-gray-600">
-                                        <span class="font-semibold font-body">Precio:</span> {{ restaurant.price_range }}
-                                    </p>
-                                    <p class="mt-1 text-gray-600">
-                                        <span class="font-semibold font-body">Contacto:</span> {{ restaurant.contact_info|default:"No disponible" }}
-                                    </p>
+                    <!-- Restaurants Section -->
+            <div class="card bg-white shadow-lg rounded-lg mt-8 p-6">
+                <div class="card-body">
+                    <h2 class="card-title text-3xl font-bold text-customDarkGreen font-title">¿Dónde Comer en {{ municipality.name }}?</h2>
+
+                    {% if restaurants %}
+                        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-6">
+                            {% for restaurant in restaurants %}
+                                <div class="card bg-white shadow-md rounded-lg p-4 border border-customGreen">
+                                    <div class="card-body">
+                                        
+                                        {% if restaurant.image %}
+                                            <img src="{{ restaurant.image.url }}" alt="{{ restaurant.name }}" class="w-full h-48 object-cover rounded-lg mb-4">
+                                        {% endif %}
+                                        <h3 class="text-xl font-title text-customDarkGreen">{{ restaurant.name }}</h3>
+                                        <p class="mt-1 text-gray-700">
+                                            <span class="font-semibold font-body">Tipo de comida:</span> {{ restaurant.cuisine_type }}
+                                        </p>
+                                        <p class="mt-1 text-gray-600">
+                                            <span class="font-semibold font-body">Precio:</span> {{ restaurant.price_range }}
+                                        </p>
+                                        <p class="mt-1 text-gray-600">
+                                            <span class="font-semibold font-body">Contacto:</span> {{ restaurant.contact_info|default:"No disponible" }}
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    <p class="text-center text-lg text-yellow-700 mt-4">No hay restaurantes registrados en este municipio.</p>
-                {% endif %}
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        <p class="text-center text-lg text-yellow-700 mt-4">No hay restaurantes registrados en este municipio.</p>
+                    {% endif %}
+                </div>
             </div>
-        </div>
+
+        
 
 
        <!-- Activities Section -->
