--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -104,6 +104,9 @@
         <!-- Login / Register -->
         <div class="flex gap-4 ml-8">
             {% if user.is_authenticated %}
+            <a href="{% url 'profile' user.username %}" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body">
+                <i class="fas fa-user mr-2"></i>Mi Perfil
+            </a>
             <form method="POST" action="{% url 'logout' %}">
                 {% csrf_token %}
                 <button type="submit" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body">Cerrar sesión</button>
