--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -32,7 +32,7 @@
         <!-- Logo -->
         <h1>
             <a href="{% url 'home' %}">
-                <img src="{% static 'Abstract_blanco.svg' %}" alt="logo" class="h-20 m-3">
+                <img src="{% static 'Abstract_blanco.png' %}" alt="logo" class="h-20 m-3">
             </a>
         </h1>
     
