--- a/destination/templates/municipality_events.html
+++ b/destination/templates/municipality_events.html
@@ -37,7 +37,7 @@
 
     <!-- Back Button -->
     <div class="mt-8 text-center">
-        <a href="{% url 'municipality_detail' municipality.id %}" class="btn btn-outline btn-primary">Volver al municipio</a>
+        <a href="{% url 'municipality_detail' municipality.id %}" class="btn bg-customLightGreen hover:bg-customGreen text-customDarkGreen font-semibold font-body py-2 transition duration-200">Volver al municipio</a>
     </div>
 
 </div>
