--- a/destination/templates/municipality_list.html
+++ b/destination/templates/municipality_list.html
@@ -33,7 +33,7 @@
             <!-- View More Button -->
             <div class="p-4 pt-0">
                 <a href="{% url 'municipality_detail' municipality.id %}" 
-                class="block text-center bg-customLightGreen hover:bg-customDarkGreen hover:text-white text-customDarkGreen font-semibold font-body py-2 rounded transition duration-200">
+                class="block text-center bg-customLightGreen hover:bg-customGreen hover:text-white text-customDarkGreen font-semibold font-body py-2 rounded transition duration-200">
                     Ver más
                 </a>
             </div>
