--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -28,27 +28,27 @@
 </head>
 
 <body class="text-black">
-    <header class="header sticky top-0 bg-customGreen shadow-md flex items-center px-8 py-2 text-gray-85 z-50 gap-6 flex-wrap">
+    <header class="header sticky top-0 bg-customGreen shadow-md flex items-center px-8 py-1 text-gray-85 z-50 gap-6 flex-wrap">
         <!-- Logo -->
         <h1>
             <a href="{% url 'home' %}">
-                <img src="{% static 'Abstract_blanco.png' %}" alt="logo" class="h-20 m-3">
+                <img src="{% static 'Abstract_blanco.png' %}" alt="logo" class="h-16 m-2">
             </a>
         </h1>
     
         <!-- Navigation -->
-        <nav class="nav font-body font-semibold text-lg text-white ml-auto">
+        <nav class="nav font-body font-semibold text-base text-white ml-auto">
             <ul class="flex items-center gap-4 whitespace-nowrap">
-                <li class="p-2 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer active">
+                <li class="p-1 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer active">
                     <a href="{% url 'home' %}">Inicio</a>
                 </li>
-                <li class="p-2 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer">
+                <li class="p-1 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer">
                     <a href="{% url 'municipality_name_list' %}">Municipios</a>
                 </li>
-                <li class="p-2 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer">
+                <li class="p-1 border-b-2 border-customDarkGreen border-opacity-0 hover:border-opacity-100 hover:text-customDarkGreen duration-200 cursor-pointer">
                     <a href="{% url 'experience_search_page' %}">Buscar Experiencias</a>
                 </li>
-                <li class="p-2 hover:text-gray-200 duration-200 cursor-pointer">
+                <li class="p-1 hover:text-gray-200 duration-200 cursor-pointer">
                     <a href="{% url 'traveler_post_list' %}">De viajero a viajero</a>
                 </li>
             </ul>
@@ -99,17 +99,17 @@
         <!-- Login / Register -->
         <div class="flex gap-4 ml-8 items-center">
             {% if user.is_authenticated %}
-                <a href="{% url 'profile' user.username %}" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body flex items-center gap-2 min-w-[150px] justify-center">
-                    <i class="fas fa-user text-lg"></i>
+                <a href="{% url 'profile' user.username %}" class="bg-customDarkGreen text-white font-semibold px-3 py-1.5 rounded-lg shadow-md font-body flex items-center gap-2 min-w-[150px] justify-center">
+                    <i class="fas fa-user text-base"></i>
                     <span>Mi Perfil</span>
                 </a>
                 <form method="POST" action="{% url 'logout' %}" class="flex items-center h-full">
                     {% csrf_token %}
-                    <button type="submit" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body min-w-[150px]">Cerrar sesión</button>
+                    <button type="submit" class="bg-customDarkGreen text-white font-semibold px-3 py-1.5 rounded-lg shadow-md font-body min-w-[150px]">Cerrar sesión</button>
                 </form>
             {% else %}
-                <a href="{% url 'login' %}" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body">Iniciar sesión</a>
-                <a href="{% url 'register' %}" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body">Registrarse</a>
+                <a href="{% url 'login' %}" class="bg-customDarkGreen text-white font-semibold px-3 py-1.5 rounded-lg shadow-md font-body">Iniciar sesión</a>
+                <a href="{% url 'register' %}" class="bg-customDarkGreen text-white font-semibold px-3 py-1.5 rounded-lg shadow-md font-body">Registrarse</a>
             {% endif %}
         </div>
     </header>
