--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -103,17 +103,17 @@
         <!-- Login / Register -->
         <div class="flex flex-col md:flex-row gap-2 md:gap-4 w-full md:w-auto md:ml-8 items-center mt-4 md:mt-0">
             {% if user.is_authenticated %}
-                <a href="{% url 'profile' user.username %}" class="bg-customDarkGreen text-white font-semibold px-3 py-1.5 rounded-lg shadow-md font-body flex items-center gap-2 w-full md:w-auto justify-center">
-                    <i class="fas fa-user text-base"></i>
+                <a href="{% url 'profile' user.username %}" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body flex items-center gap-2 w-full md:w-auto justify-center text-base">
+                    <i class="fas fa-user text-lg"></i>
                     <span>Mi Perfil</span>
                 </a>
-                <form method="POST" action="{% url 'logout' %}" class="w-full md:w-auto">
+                <form method="POST" action="{% url 'logout' %}" class="w-full md:w-auto mt-4">
                     {% csrf_token %}
-                    <button type="submit" class="bg-customDarkGreen text-white font-semibold px-3 py-1.5 rounded-lg shadow-md font-body w-full">Cerrar sesión</button>
+                    <button type="submit" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body w-full text-base">Cerrar sesión</button>
                 </form>
             {% else %}
-                <a href="{% url 'login' %}" class="bg-customDarkGreen text-white font-semibold px-3 py-1.5 rounded-lg shadow-md font-body w-full md:w-auto text-center">Iniciar sesión</a>
-                <a href="{% url 'register' %}" class="bg-customDarkGreen text-white font-semibold px-3 py-1.5 rounded-lg shadow-md font-body w-full md:w-auto text-center">Registrarse</a>
+                <a href="{% url 'login' %}" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body w-full md:w-auto text-center text-base">Iniciar sesión</a>
+                <a href="{% url 'register' %}" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body w-full md:w-auto text-center text-base">Registrarse</a>
             {% endif %}
         </div>
     </header>
