Update: Icon in web

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -22,7 +22,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
     <!-- Icon in web -->
-    <link rel="icon" type="image/png" href="{% static 'favicon_io/favicon-16x16.png' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon_io/favicon.ico' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_io/favicon-16x16.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_io/favicon-32x32.png' %}">
 
     {% tailwind_css %}
 </head>
